Début d'implem RWD stoppée a cause de pbs pour gérer les alignements avec un transform: scale() en CSS

--- a/style.css
+++ b/style.css
@@ -28,3 +28,35 @@
     background: #333333;
     color: white;
 }
+
+@media only screen and (max-width: 900px) {
+
+    body {
+        overflow: auto;
+    }
+
+    .editor {
+        display: flex;
+
+        flex-direction: column;
+    }
+
+    .editor-panel {
+        order: 2;
+        height: inherit;
+        width: 100%;
+        position: static;
+    }
+
+    .editor-view {
+        order: 1;
+        position: static;
+        width: auto;
+        height: auto;
+        padding:0;
+        display: block;
+        overflow: visible;
+        margin: 20px 0;
+    }
+
+}
